Cleaned ModActor up
Added the custom events
Added example mod button

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -8,22 +8,34 @@ m_CharacterNoCollisionContainer=(WorldStatic=ECR_Overlap,WorldDynamic=ECR_Overla
 m_CharacterDefaultProfile=(Name="NoCollision")
 m_CharacterRagdollProfile=(Name="Ragdoll")
 m_TriggerDefaultProfile=(Name="Trigger")
-m_TriggerPawnProfile=(Name="TriggerPawn")
-m_TriggerLocalPawnProfile=(Name="Trigger_LocalPlayer")
+m_TriggerPawnProfile=(Name="NoCollision")
+m_TriggerLocalPawnProfile=(Name="NoCollision")
 m_LevelDesignCollisionMap=(((Name="NoCollision"), (Name="NoCollision")),((Name="NoCollision"), (Name="NoCollision")))
 m_eCapsuleLocalPawnChannel=ECC_GameTraceChannel2
 m_eHitTraceChannel=ECC_GameTraceChannel3
 m_eStaticCollChannel=ECC_WorldStatic
 m_eLDCollChannel=ECC_GameTraceChannel4
-m_LDOnlyPawnProfile=(Name="Pawn_LD")
-m_LDOnlyModelProfile=(Name="BlockAll_LD")
+m_LDOnlyPawnProfile=(Name="NoCollision")
+m_LDOnlyModelProfile=(Name="NoCollision")
 m_EnvCollisionRetrieveSphereRadius=20.000000
 m_EnvCollisionRetrieveSweepDist=20.000000
 m_CharacterPrepareRagdollProfile=(Name="CharacterMesh_IgnoreCam")
+m_CharacterNoCollisionProfile=(Name="NoCollision")
+m_CharacterPhysicsProfile=(Name="NoCollision")
+m_CharacterHitCapsuleProfile=(Name="NoCollision")
+m_ReplayPawnCapsuleProfile=(Name="NoCollision")
+m_ReplayPawnMeshProfile=(Name="NoCollision")
+m_ReplayPropsDestroyed=(Name="NoCollision")
+m_ReplayPropsProfile=(Name="NoCollision")
+m_NoCollisionTraceMeshProfile=(Name="NoCollision")
 
 [/Script/Engine.WorldSettings]
 MinGlobalTimeDilation=0.0
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 bGenerateChunks=True
+
+[/Script/Sifu.WCollisionSettings]
+m_WakeBreakableProximityProfile=(Name="NoCollision")
+m_TraversalProfileName=(Name="NoCollision")
 
